[project]
name = "ravexrpc"
version = "0.1.0"
description = "Cliente asíncrono para interactuar con el RPC de Solana"
readme = "README.md"
authors = [{ name = "Christian Flores", email = "christianmfm10@gmail.com" }]
requires-python = ">=3.14"
license = { text = "MIT" }
keywords = ["solana", "rpc", "blockchain", "crypto", "web3", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: AsyncIO",
]
dependencies = ["pydantic>=2.12.5", "ravexclient"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.9.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/christianfm10/ravexrpc"
Documentation = "https://github.com/christianfm10/ravexrpc#readme"
Repository = "https://github.com/christianfm10/ravexrpc"
Issues = "https://github.com/christianfm10/ravexrpc/issues"

[project.scripts]
ravexrpc = "ravexrpc:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
ravexclient = { git = "https://github.com/christianfm10/ravexclient" }

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "ravexclient.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = ["-v", "--strict-markers", "--tb=short", "--disable-warnings"]
markers = [
    "asyncio: marca tests que usan asyncio",
    "integration: marca tests de integración (requieren RPC real)",
    "unit: marca tests unitarios",
]

[tool.coverage.run]
source = ["src/ravexrpc"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "pytest-cov>=7.0.0"]
